--- a/test-site/index.html
+++ b/test-site/index.html
@@ -12,7 +12,7 @@
   iframe{width:100%;height:75vh;border:1px solid var(--border);border-radius:12px;background:#fff}
 </style>
 <div class="wrap">
-  <h1>Test – osadzony agent AI (iframe)</h1>
+  <h1>Test agenta AI dla pewnego hotelu. Chcesz wiedzieć jakiego? To się spytaj poniżej(iframe)</h1>
   <p class="card">Poniżej osadzamy <code>/agent/ui</code>, czyli interfejs serwowany przez backend proxy.
     Proxy łączy się z prywatnym Agentem DO przez <em>Agent Access Key</em>.
   </p>
