--- a/proxy/ui.html
+++ b/proxy/ui.html
@@ -17,7 +17,7 @@
   .small{opacity:.8;font-size:.9rem}
 </style>
 <div class="wrap">
-  <h1>Agent AI (SSE streaming)</h1>
+  <h1>Witaj, tu NoterAI, chętnie odpowiem na Twoje pytania</h1>
   <div id="log" class="log" aria-live="polite"></div>
   <form id="f" autocomplete="off">
     <input id="q" placeholder="Zadaj pytanie..." />
