--- a/test-site/index.html
+++ b/test-site/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
-<html lang="pl">
+<!--   <html lang="pl">  -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Test – Agent AI (Private + iframe)</title>
+<title>Test – NoterAI</title>
 <style>
   :root { --bg:#0b1020; --fg:#eef; --panel:#11183a; --border:#2b3463; }
   *{box-sizing:border-box}
@@ -12,7 +12,7 @@
   iframe{width:100%;height:75vh;border:1px solid var(--border);border-radius:12px;background:#fff}
 </style>
 <div class="wrap">
-  <h1>Test agenta AI dla pewnego hotelu. Chcesz wiedzieć jakiego? To się spytaj poniżej(iframe)</h1>
+  <h1>Test agenta AI dla pewnego hotelu. Chcesz wiedzieć jakiego? To się spytaj poniżej </h1>
   <p class="card">Poniżej osadzamy <code>/agent/ui</code>, czyli interfejs serwowany przez backend proxy.
     Proxy łączy się z prywatnym Agentem DO przez <em>Agent Access Key</em>.
   </p>
